# wasm-webp

./: CMakeLists.txt  beautified-webp_wasm.js  gulpfile.js  index.html  libwebp.diff  package.json  sw.js  webp-decoder.js  webp.c  webp_wasm.js  webp_wasm.wasm
classic/: webp-decoder.js
